--- a/exercises/assets/css/style-7.css
+++ b/exercises/assets/css/style-7.css
@@ -21,11 +21,11 @@ input, button, textarea, select { font: inherit }
 /* Web page */
 body { 
     background-color: #d1274b
+;    font-family: 'Neucha', serif;
 }
 
 /* Main heading */
 h1 {
-	font-family: serif;
 	font-weight: bold;
     font-size: 112px;
     color: #fff;
@@ -36,7 +36,6 @@ h1 {
 
 /* Small headings */
 h2 {
-	font-family: serif;
     font-weight: bold;
     font-size: 38px;
     color: #fff;
@@ -48,7 +47,6 @@ h2 {
 
 /* Smaller headings */
 h3 {
-	font-family: serif;
     font-weight: bold;
     font-size: 56px;
     color: #fff;
