--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -67,3 +67,25 @@ img {
     /* Drop shadow effect at right and bottom of image*/
     box-shadow: 8px 10px 8px #888;
 }
+
+.video-container {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    margin-bottom: 32px;
+}
+            
+.video-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+            
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
